--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -26,7 +26,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
 }
 
 .main-sidebar {
-  margin-bottom: $space-double;
+  margin-bottom: rhythm(2);
 
   @include bp3 {
     order: 2;
