--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/vertical-rhythm/_vertical_rhythm.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/vertical-rhythm/_vertical_rhythm.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 /**
  * @file
  * Libsass-compatible port of Compass' vertical-rhythm helpers
@@ -307,3 +308,4 @@ $compass-rhythm-support-ie6: false;
 ) {
   @include apply-side-rhythm-border(all, $width, $lines, $font-size, $border-style);
 }
+/* stylelint-enable */
