--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/animations/_animation.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/animations/_animation.scss
@@ -28,3 +28,23 @@
   padding: 1em;
   text-align: center;
 }
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
