--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/vertical-rhythm/_grid_background.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/vertical-rhythm/_grid_background.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 // Set the color of your baseline
 $grid-background-baseline-color   : rgba(0, 0, 0, 0.5)          !default;
 // Set the height of your baseline grid
@@ -27,3 +28,4 @@ $show-grid-backgrounds            : true                        !default;
   $gradient: linear-gradient(to top, $color 5%, rgba($color, 0) 5%);
   @return $gradient;
 }
+/* stylelint-enable */
