add in full color palette

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -1,15 +1,64 @@
+// Primary Palette
+$primary-dark: #003056;
+$primary-light: #4DA0D2;
+$healing: #008A77;
+$healing-med: #279A8B;
+$healing-lt: #6CADA3;
+$healing-ltr: #9BC3BD;
+$healing-ltst: #CBDFDA;
+
+$uplifting: #E0C100;
+$uplifting-med: #E6CC49;
+$uplifting-lt: #ECD879;
+$uplifting-ltr: #F2E5A3;
+$uplifting-ltst: #F8F1CE;
+
+$trust: #4D7BBE;
+$trust-med: #6F8FC9;
+$trust-lt: #8EA5D5;
+$trust-ltr: #B1BFE2;
+$trust-ltst: #D5DCF0;
+
+$wisdom: #8264AB;
+$wisdom-med: #967CB8;
+$wisdom-lt: #AB96C8;
+$wisdom-ltr: #C2B6D9;
+$wisdom-ltst: #DED7EB;
+
+$growth: #8DB750;
+$growth-med: #A3C372;
+$growth-lt: #B8D092;
+$growth-ltr: #CEDEB3;
+$growth-ltst: #E4EDD7;
+
+$tranquil: #3FC1CB;
+$tranquil-med: #6FCCD4;
+$tranquil-lt: #96D7DD;
+$tranquil-ltr: #B9E3E9;
+$tranquil-ltst: #DBF0F4;
+
+$energy: #F47820;
+$energy-med: #F69147;
+$energy-lt: #FAAB70;
+$energy-ltr: #FCC59A;
+$energy-ltst: #FEE0C7;
+
+$neuro: #32863d;
+$ortho: #068473;
+$ws: #c34b63;
+$ed: #d64000;
+$onc: #8262ac;
+$cardio: #d22e2c;
+$surg: #236e88;
+$bari: #0c7ba7;
+
 // Grayscale
 $white: white;
-$near-white: #f2f2f2;
-$gray-lightest: #e5e5e5;
-$gray-lighter: #ccc;
-$gray-light: #999;
-$gray: #666;
-$gray-dark: #4c4c4c;
-$gray-darker: #333;
+$off-white: #f2f2f2;
+$gray-lighter: #BBBDC0;
+$gray-light: #939597;
+$gray: #6D6E70;
+$gray-dark: #404041;
 $black: black;
-
-// Helper colors
-$yellow: #ff0; // Mark
 
 // Project
