--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/accordion-item/_accordion-item.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/accordion-item/_accordion-item.scss
@@ -1,5 +1,5 @@
 .accordion-term {
-  border-top: 1px solid $gray-lightest;
+  border-top: 1px solid $gray-light;
   color: $gray-dark;
   cursor: pointer;
   display: block;
