--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
@@ -59,7 +59,7 @@
   // See main-menu.js
   &--open {
     background-color: $black;
-    color: $near-white;
+    color: $off-white;
 
     &::after {
       border-top-color: transparent;
