--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -1,47 +1,47 @@
 // Primary Palette
 $primary-dark: #003056;
-$primary-light: #4DA0D2;
-$healing: #008A77;
-$healing-med: #279A8B;
-$healing-lt: #6CADA3;
-$healing-ltr: #9BC3BD;
-$healing-ltst: #CBDFDA;
+$primary-light: #4da0d2;
+$healing: #008a77;
+$healing-med: #279a8b;
+$healing-lt: #6cada3;
+$healing-ltr: #9bc3bd;
+$healing-ltst: #cbdfda;
 
-$uplifting: #E0C100;
-$uplifting-med: #E6CC49;
-$uplifting-lt: #ECD879;
-$uplifting-ltr: #F2E5A3;
-$uplifting-ltst: #F8F1CE;
+$uplifting: #e0c100;
+$uplifting-med: #e6cc49;
+$uplifting-lt: #ecd879;
+$uplifting-ltr: #f2e5a3;
+$uplifting-ltst: #f8f1ce;
 
-$trust: #4D7BBE;
-$trust-med: #6F8FC9;
-$trust-lt: #8EA5D5;
-$trust-ltr: #B1BFE2;
-$trust-ltst: #D5DCF0;
+$trust: #4d7bbe;
+$trust-med: #6f8fc9;
+$trust-lt: #8ea5d5;
+$trust-ltr: #b1bfe2;
+$trust-ltst: #d5dcf0;
 
-$wisdom: #8264AB;
-$wisdom-med: #967CB8;
-$wisdom-lt: #AB96C8;
-$wisdom-ltr: #C2B6D9;
-$wisdom-ltst: #DED7EB;
+$wisdom: #8264ab;
+$wisdom-med: #967cb8;
+$wisdom-lt: #ab96c8;
+$wisdom-ltr: #c2b6d9;
+$wisdom-ltst: #ded7eb;
 
-$growth: #8DB750;
-$growth-med: #A3C372;
-$growth-lt: #B8D092;
-$growth-ltr: #CEDEB3;
-$growth-ltst: #E4EDD7;
+$growth: #8db750;
+$growth-med: #a3c372;
+$growth-lt: #b8d092;
+$growth-ltr: #cedeb3;
+$growth-ltst: #e4edd7;
 
-$tranquil: #3FC1CB;
-$tranquil-med: #6FCCD4;
-$tranquil-lt: #96D7DD;
-$tranquil-ltr: #B9E3E9;
-$tranquil-ltst: #DBF0F4;
+$tranquil: #3fc1cb;
+$tranquil-med: #6fccd4;
+$tranquil-lt: #96d7dd;
+$tranquil-ltr: #b9e3e9;
+$tranquil-ltst: #dbf0f4;
 
-$energy: #F47820;
-$energy-med: #F69147;
-$energy-lt: #FAAB70;
-$energy-ltr: #FCC59A;
-$energy-ltst: #FEE0C7;
+$energy: #f47820;
+$energy-med: #f69147;
+$energy-lt: #faab70;
+$energy-ltr: #fcc59a;
+$energy-ltst: #fee0c7;
 
 $neuro: #32863d;
 $ortho: #068473;
@@ -55,10 +55,11 @@ $bari: #0c7ba7;
 // Grayscale
 $white: white;
 $off-white: #f2f2f2;
-$gray-lighter: #BBBDC0;
+$gray-lighter: #bbbdc0;
 $gray-light: #939597;
-$gray: #6D6E70;
+$gray: #6d6e70;
 $gray-dark: #404041;
 $black: black;
 
 // Project
+$yellow: $uplifting;
