--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/animations/_animation.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/animations/_animation.scss
@@ -22,7 +22,7 @@
 }
 
 .demo-animate {
-  background-color: $gray-lightest;
+  background-color: $gray-lighter;
   border-radius: 8px;
   cursor: pointer;
   padding: 1em;
