--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_04-base.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_04-base.scss
@@ -14,7 +14,7 @@
 // Add your base font family, size, lineheight, and color.
 // Include global adjustments for breakpoint sizing if desired.
 body {
-  color: $black;
+  color: $gray-dark;
   font-size: ($base-font-size / 16px) * 100%;
   line-height: ($base-line-height / $base-font-size) * 1em;
   font-family: $base-font-family;
@@ -33,16 +33,18 @@ a,
 a:link,
 a:visited {
   @include trans();
-  color: $gray-dark;
+  color: $healing;
 }
 
 a:active,
 a:hover {
-  color: $gray-light;
+  color: $healing;
+  text-decoration: underline;
 }
 
 a:focus {
-  color: $gray-light;
+  color: $healing;
+  text-decoration: underline;
 }
 
 // Pre tag
