--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_pl-base.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_pl-base.scss
@@ -36,7 +36,7 @@
   .sg-subtype h2 {
     font-size: 3rem;
     text-transform: uppercase;
-    background-color: $gray-darker;
+    background-color: $gray-dark;
 
     a {
       display: block;
