--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
@@ -1,12 +1,10 @@
-/// Link
-$color-link: $gray-darker;
-$color-link--hover: $gray-light;
-
 @mixin link {
-  color: $color-link;
-
-  &:hover {
-    color: $color-link--hover;
+  color: $healing;
+  
+  &:active,
+  &:hover,
+  &:focus {
+    color: $healing;
   }
 }
 
