--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
@@ -1,5 +1,5 @@
-$table-gray: #f8f8f8;
-$table-border: $gray-lightest;
+$table-gray: $gray;
+$table-border: $gray-light;
 
 .table {
   border: 1px solid $table-border;
