--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/09-menu/tab/_tab.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/09-menu/tab/_tab.scss
@@ -1,7 +1,7 @@
 .tabs__link,
 .tabs__link--local-tasks {
-  background-color: $near-white;
-  border: 1px solid $gray-lightest;
+  background-color: $off-white;
+  border: 1px solid $gray-light;
   border-bottom: none;
   color: $gray;
   display: block;
@@ -13,7 +13,7 @@
   transition: color 0.3s;
 
   @include bp3 {
-    border-bottom: 1px solid $gray-lightest;
+    border-bottom: 1px solid $gray-light;
     border-left: none;
     display: inline-block;
     font-size: 1rem;
@@ -24,8 +24,8 @@
   }
 
   &:hover {
-    background-color: $gray-lightest;
-    color: $gray-darker;
+    background-color: $gray-light;
+    color: $gray-dark;
   }
 
   &.is-active {
@@ -35,7 +35,7 @@
 
     @include bp3 {
       background-color: $white;
-      border: 1px solid $gray-lightest;
+      border: 1px solid $gray-light;
       border-bottom: 1px solid $gray;
       border-left: none;
       color: $gray;
