--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/info-box/_info-box.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/info-box/_info-box.scss
@@ -1,5 +1,5 @@
 .info-box {
-  background-color: $gray-lightest;
+  background-color: $gray-light;
   margin-bottom: 2%;
   padding: 1em;
   width: 100%;
