--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_02-main-menu-link.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_02-main-menu-link.scss
@@ -25,7 +25,7 @@
     &.active,
     &:active,
     &:hover {
-      color: $gray-lighter;
+      color: $gray-light;
     }
 
     &::after {
@@ -65,7 +65,7 @@
 }
 
 .main-menu--sub-2 {
-  background-color: $gray-lightest;
+  background-color: $gray-light;
 }
 
 .main-menu__link--sub-2 {
