--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/tabs/_tabs.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/tabs/_tabs.scss
@@ -2,10 +2,10 @@
 .tabs__nav {
   @include list-reset;
 
-  border-bottom: 1px solid $gray-lightest;
+  border-bottom: 1px solid $gray-light;
 
   @include bp3 {
-    border-left: 1px solid $gray-lightest;
+    border-left: 1px solid $gray-light;
     display: flex;
   }
 }
