--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/radio/_radio.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/radio/_radio.scss
@@ -1,4 +1,46 @@
 .form-item--radios,
 .form-item--radio__item {
   @include list-reset;
+  
+  input {
+    margin: .25em rhythm(.5) .5em .25em;
+    position: absolute;
+    left: 0;
+    top: -2px;
+    z-index: 1;
+    
+    &::before {
+      position: absolute;
+      top: -0.25em;
+      left: -0.25em;
+      content: '';
+      display: inline-block;
+      height: 25px;
+      width: 25px;
+      background-color: $off-white;
+      border: 1px solid rgba($gray-lighter, .7);
+      border-radius: 50px;
+    }
+    
+    &:checked::after {
+      position: absolute;
+      top: .125em;
+      left: .125em;
+      content: '';
+      display: inline-block;
+      height: 13px;
+      width: 13px;
+      background-color: $healing;
+      border-radius: 50px;
+      box-shadow: 0 1px 3px rgba($gray-dark, .45);
+    }
+  }
+  
+  label {
+    position: relative;
+    color: $gray-dark;
+    margin-bottom: rhythm(.45);
+    padding-left: 35px;
+    font-weight: 400;
+  }
 }
