--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/radio/_radio.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/radio/_radio.scss
@@ -6,7 +6,7 @@
     margin: .25em rhythm(.5) .5em .25em;
     position: absolute;
     left: 0;
-    top: -2px;
+    top: 0;
     z-index: 1;
     
     &::before {
@@ -39,7 +39,7 @@
   label {
     position: relative;
     color: $gray-dark;
-    margin-bottom: rhythm(.45);
+    margin-bottom: rhythm(.35);
     padding-left: 35px;
     font-weight: 400;
   }
