add in temporary typekit

--- a/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
@@ -7,6 +7,9 @@
 
     <!-- Component styles -->
     <link rel="stylesheet" href="../../../../dist/style.css?{{ cacheBuster }}" media="all" />
+    
+    {# Font styles, NEED TO REPLACE with TH's font sub #}
+    <link rel="stylesheet" href="https://use.typekit.net/xgz4nst.css">
 
     <!-- Drupal-specific usage -->
     <!-- example using symlinking -->
