add some additional color variables for contrast standards

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -13,6 +13,7 @@ $uplifting-lt: #ecd879;
 $uplifting-ltr: #f2e5a3;
 $uplifting-ltst: #f8f1ce;
 
+$trust-aa: #4776bd;
 $trust: #4d7bbe;
 $trust-med: #6f8fc9;
 $trust-lt: #8ea5d5;
@@ -25,6 +26,8 @@ $wisdom-lt: #ab96c8;
 $wisdom-ltr: #c2b6d9;
 $wisdom-ltst: #ded7eb;
 
+$growth-aa: #627f34;
+$growth-lg: #7b9f41;
 $growth: #8db750;
 $growth-med: #a3c372;
 $growth-lt: #b8d092;
