--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
@@ -67,12 +67,11 @@ $verdana: Verdana, Tahoma, "DejaVu Sans", sans-serif;
 $tahoma: Tahoma, Verdana, "DejaVu Sans", sans-serif;
 $helvetica: Helvetica, Arial, "Nimbus Sans L", sans-serif;
 $arial: Arial, Helvetica, "Nimbus Sans L", sans-serif;
-
+$gibson: 'canada-type-gibson', $helvetica;
 // If using server side fonts, place your @font-face declarations here:
 
 // Now, Create your custom font stacks
-$sans: $helvetica;
-$serif: $georgia;
+$sans: $gibson;
 $mono: "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
 
 // Last, determine which fonts to add to these variables used in normalize.scss
