--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
@@ -1,10 +1,10 @@
 @mixin link {
-  color: $healing;
+  color: $trust-aa;
   
   &:active,
   &:hover,
   &:focus {
-    color: $healing;
+    color: $trust-aa;
   }
 }
 
