--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/00-headings/_headings.scss
@@ -25,6 +25,7 @@ h3 {
   @include adjust-font-size-to($h3-font-size, 1.35);
   @include leader(1, $h3-font-size);
   @include trailer(.75, $h3-font-size);
+  font-weight: 600;
 }
 
 %h4,
@@ -32,6 +33,7 @@ h4 {
   @include adjust-font-size-to($h4-font-size, 1.1);
   @include leader(1, $h4-font-size);
   @include trailer(.5, $h4-font-size);
+  font-weight: 600;
 }
 
 %h5,
@@ -39,6 +41,7 @@ h5 {
   @include adjust-font-size-to($h5-font-size, .95);
   @include leader(.75, $h5-font-size);
   @include trailer(.5, $h5-font-size);
+  font-weight: 600;
 }
 
 %h6,
@@ -46,4 +49,5 @@ h6 {
   @include adjust-font-size-to($h6-font-size, .85);
   @include leader(.75, $h6-font-size);
   @include trailer(.25, $h6-font-size);
+  font-weight: 600;
 }
