modify forms to use new palette

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -12,15 +12,15 @@
   &:active,
   &:hover,
   &:focus {
-    border-color: $healing;
+    border-color: $trust-aa;
   }
 }
 
 %label,
 label {
   @include adjust-font-size-to($label);
-  font-weight: 700;
-  color: $gray-dark;
+  font-weight: 400;
+  color: $trust-aa;
   display: block;
   margin-bottom: rhythm(.25);
 }
