Update with new tower health font code

--- a/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
@@ -7,10 +7,8 @@
 
     <!-- Component styles -->
     <link rel="stylesheet" href="../../../../dist/style.css?{{ cacheBuster }}" media="all" />
-    
-    {# Font styles, NEED TO REPLACE with TH's font sub #}
-    <link rel="stylesheet" href="https://use.typekit.net/xgz4nst.css">
-
+    <!-- TH Adobe Font Code -->
+    <link rel="stylesheet" href="https://use.typekit.net/aqk4svu.css">
     <!-- Drupal-specific usage -->
     <!-- example using symlinking -->
     <!-- cd web/themes/custom/tower_health/components/js -->
