TH-263 add link around logo

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/footer.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/footer.twig
@@ -1,7 +1,9 @@
 <footer class="footer">
   <div class="footer-top">
     <div class="footer__info">
-      <img src="{{ logo.src }}" alt="{{ logo.alt }}" />
+      <a href="/" alt="Tower Health logo">
+        <img src="{{ logo.src }}" alt="{{ logo.alt }}" />
+      </a>
       <div class="footer__info__social">
         <a href="{{ social_facebook }}">
           {% include "social-facebook.svg" %}
