--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
@@ -84,6 +84,10 @@
       a {
         display: inline-block;
         margin: 0.25em;
+
+        &:hover {
+          transform: scale(1.1);
+        }
       }
     }
   }
