TH-263 group title color/line-height

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
@@ -97,8 +97,10 @@
         text-transform: uppercase;
         font-weight: 600;
         letter-spacing: 0.1em;
+        line-height: 1.1em;
         display: block;
         margin-bottom: 1em;
+        color: $primary-dark;
       }
 
       a {
