--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
@@ -85,7 +85,7 @@
 
     &__section {
       width: 100%;
-      margin: 1em;
+      margin: 1em 0;
       padding-top: 1em;
       border-top: 5px solid $growth;
 
