--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/footer/_footer.scss
@@ -129,7 +129,7 @@
       a {
         display: inline-block;
         padding: 0 0.5em;
-        border-right: 1px solid $black;
+        border-right: 1px solid $gray-lighter;
 
         &:last-of-type {
           border-right: none;
