TH-263 change logo image

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
@@ -1,9 +1,11 @@
 <footer class="footer">
   <div class="footer-top">
     <div class="footer__info">
-      <a href="/" alt="Tower Health logo">
-        <img src="{{ logo.src }}" alt="{{ logo.alt }}" />
-      </a>
+      {% include "@atoms/04-images/00-image/figure.twig" with {
+        img_src: "../../images/TowerHealth_H.svg",
+        img_alt: "Tower Health Logo",
+        img_url: logo_link_url|default('/'),
+      } %}
       <div>
         <div class="footer__info__social">
           <a href="{{ social.facebook }}">
