TH-263 use yml and menu files

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
@@ -37,16 +37,7 @@
       </div>
     </div>
     <div class="footer__links">
-      {% for section in sections %}
-        <div class="footer__links__section">
-          <span class="footer__links__section__title">
-            {{ section.title }}
-          </span>
-          {% for link in section.links %}
-            <a href="{{ link.href }}">{{ link.title }}</a>
-          {% endfor %}
-        </div>
-      {% endfor %}
+      {% include "@molecules/menus/footer-menu/footer-menu.twig" %}
     </div>
   </div>
   <div class="footer-bottom">
