TH-263 add links for top level footer menu items

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-menu/_footer-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-menu/_footer-menu.scss
@@ -96,7 +96,7 @@
         width: calc(33% - 2em);
       }
 
-      &__title {
+      a:first-of-type {
         text-transform: uppercase;
         font-weight: 600;
         letter-spacing: 0.1em;
