--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-menu/footer-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-menu/footer-menu.twig
@@ -33,9 +33,9 @@
 
     {% for item in items %}
       <div class="footer__links__section">
-        <span class="footer__links__section__title">
+        <a class="footer__links__section__title" href="{{ item.url }}">
           {{ item.title }}
-        </span>
+        </a>
         {% if item.below %}
           {% for link in item.below %}
             <a href="{{ link.url }}">{{ link.title }}</a>
