--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
@@ -34,6 +34,7 @@
 
     @include breakpoint($bp3) {
       flex-wrap: nowrap;
+      justify-content: space-between;
     }
 
     @include breakpoint($bp4) {
@@ -41,13 +42,16 @@
       max-width: 361px;
       flex-wrap: wrap;
       align-items: flex-start;
+      justify-content: center;
     }
 
     img {
       margin: 0 auto;
+      width: 75%;
 
       @include breakpoint($bp3) {
         margin-right: 2em;
+        width: auto;
       }
 
       @include breakpoint($bp4) {
@@ -56,12 +60,32 @@
     }
 
     &__contact {
+      // text-align: right;
+
+      @include breakpoint($bp3) {
+        text-align: right;
+      }
+
+      @include breakpoint($bp4) {
+        text-align: center;
+      }
+
       a {
         display: block;
       }
     }
 
     &__social {
+      // text-align: right;
+
+      @include breakpoint($bp3) {
+        text-align: right;
+      }
+
+      @include breakpoint($bp4) {
+        text-align: center;
+      }
+
       a {
         display: inline-block;
         margin: 0.25em;
@@ -96,7 +120,7 @@
         width: calc(33% - 2em);
       }
 
-      &__title {
+      a:first-of-type {
         text-transform: uppercase;
         font-weight: 600;
         letter-spacing: 0.1em;
@@ -118,14 +142,15 @@
   }
 
   &__details {
-    font-size: 0.9em;
+    @include adjust-font-size-to($label, .9);
 
     a {
       display: block;
       margin-bottom: 0.5em;
+      border: none;
     }
 
-    @include breakpoint($bp2) {
+    @include breakpoint($bp3) {
       a {
         display: inline-block;
         padding: 0 0.5em;
