TH-263 styling updates

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
@@ -93,6 +93,7 @@ $bp4: 1200px;
 $bp5: 1600px;
 
 $footer1: 450px;
+$footer2: 695px;
 $footer2: 750px;
 
 // =============================================================================
